test/corpus/fail/self-import.mo
=========
self-import.mo
=========

import _ = "self-import";

---

(source_file
  (import
    (wild_pat)
    (text_literal)))
